        Reviewed by Xan Lopez.

[GTK] couple fixes for signal emissions, and property notifications
        https://bugs.webkit.org/show_bug.cgi?id=33428

        Fix commitedLoad being called where it should not, causing it to
        be called one time too many in some cases. We now match Qt's and
        Mac's behavior here.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::finishedLoading):
        * tests/testloading.c:
        (load_error_status_changed_cb):

Canonical link: https://commits.webkit.org/44546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53138 268f45cc-cd09-0410-ab3c-d52691b4dbfc